// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRouteData should return first component if pagePerSection and hash is empty 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "codeSamples": "collapse",
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              "example 0",
              "example 1",
            ],
          },
        },
      ],
      "propsMethods": "collapse",
      "sections": Array [],
    },
  ],
}
`;

exports[`getRouteData should return first section if pagePerSection and hash is empty 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "sections": Array [
        Object {
          "codeSamples": "collapse",
          "components": Array [
            Object {
              "module": 1,
              "name": "Button",
              "props": Object {
                "displayName": "Button",
                "examples": Array [
                  "example 0",
                  "example 1",
                ],
              },
            },
            Object {
              "module": 2,
              "name": "Image",
              "props": Object {
                "displayName": "Image",
              },
            },
          ],
          "propsMethods": "collapse",
          "sections": Array [],
        },
        Object {
          "codeSamples": "collapse",
          "components": Array [],
          "content": Array [
            "example 0",
            "example 1",
          ],
          "name": "Section",
          "propsMethods": "collapse",
          "sections": Array [],
        },
      ],
    },
  ],
}
`;

exports[`getRouteData should return one component 1`] = `
Object {
  "displayMode": "component",
  "sections": Array [
    Object {
      "codeSamples": "collapse",
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              "example 0",
              "example 1",
            ],
          },
        },
      ],
      "propsMethods": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one example from a component 1`] = `
Object {
  "displayMode": "example",
  "sections": Array [
    Object {
      "codeSamples": "collapse",
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              "example 1",
            ],
          },
        },
      ],
      "propsMethods": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one example from a section 1`] = `
Object {
  "displayMode": "example",
  "sections": Array [
    Object {
      "codeSamples": "collapse",
      "components": Array [],
      "content": Array [
        "example 1",
      ],
      "name": "Section",
      "propsMethods": "collapse",
      "sections": Array [],
    },
  ],
}
`;

exports[`getRouteData should return one section 1`] = `
Object {
  "displayMode": "section",
  "sections": Array [
    Object {
      "codeSamples": "collapse",
      "components": Array [],
      "content": Array [
        "example 0",
        "example 1",
      ],
      "name": "Section",
      "propsMethods": "collapse",
      "sections": Array [],
    },
  ],
}
`;
